# hexo-bridge

./: .gitignore  LICENSE  OPEN-QUESTIONS.md  README.md  pyproject.toml
docs/: data-flow.md  getting-started.md  stdio-protocol.md  write-your-own-adapter.md
examples/: config.custom-engine.dotted-path.toml  config.custom-engine.entrypoint.toml  config.in-process.toml  config.loopback.toml  config.register.toml  config.stateless-engine.toml  config.stdio.toml  config.websocket-session.toml  stateless_engine_reference.py
src/hexo_bridge/: __init__.py  bridge.py  cli.py  specs.py
src/hexo_bridge/adapters/engine_sessions/: htttx_models.py  htttx_websocket.py
src/hexo_bridge/adapters/engines/: htttx_stateless.py  htttx_stateless_models.py  in_process.py  stdio.py  subprocess.py
src/hexo_bridge/core/: __init__.py  board.py  move.py
src/hexo_bridge/ports/: engine.py  engine_session.py  platform.py
src/hexo_bridge/registry/: config.py  resolver.py
src/hexo_bridge_examples/: __init__.py  custom_engine.py  seal_perf_engine.py
tests/: test_bridge_fixes.py  test_builders.py  test_config.py  test_core.py  test_engine_adapter.py  test_example_configs.py  test_in_process_engine.py  test_leak.py  test_loopback_e2e.py  test_ndjson.py  test_platform_errors.py  test_registry.py  test_request_id.py  test_spec_contract.py  test_subprocess_engine.py
